--- a/microservice-zuul-gateway-9527/src/main/resources/application.yml
+++ b/microservice-zuul-gateway-9527/src/main/resources/application.yml
@@ -15,51 +15,46 @@ eureka:
     instance-id: microservicecloud-zuul-gateway
     prefer-ip-address: true
 
-
 zuul:
+  host:
+    max-per-route-connections: 10000
+    max-total-connections: 60000
+    socket-timeout-millis: 2000
   routes:
-      # 对各模块进行转发
+      ignoredServices: "*"
+      sensitiveHeaders: "*"
       # 登录模块
       login-service:
         path: /hyapi/common/**
         serviceId: microservicecloud-login
-        sensitiveHeaders: "*"
-      # 产品模块
-      product-service:
-        path: /hyapi/admin/business/product/**
-        serviceId: microservicecloud-product
-        sensitiveHeaders: "*"
-      # 文件上传模块
-      upload-service:
-        path: /hyapi/resource/**
-        serviceId: microservicecloud-upload
-      # 供应商模块
-      supplier-service:
-        path: /hyapi/admin/business/provider/**
-        serviceId: microservicecloud-supplier
         sensitiveHeaders: "*"
       # 订单模块
       order-service:
         path: /hyapi/admin/business/order/**
         serviceId: microservicecloud-order
         sensitiveHeaders: "*"
+      # 产品模块
+      product-service:
+        path: /hyapi/admin/business/product/**
+        serviceId: microservicecloud-product
+          ribbon:
+             MaxTotalConnecttions: 20000
+             MaxConnectionsPerHost: 20000
+        sensitiveHeaders: "*"
+      # 供应商模块
+      supplier-service:
+        path: /hyapi/admin/business/provider/**
+        serviceId: microservicecloud-supplier
+        sensitiveHeaders: "*"
+      # 文件上传模块
+      upload-service:
+        path: /hyapi/resource/**
+        serviceId: microservicecloud-upload
       # 商城模块
       ymym-service:
         path: /hyapi/ymym/**
         serviceId: microservicecloud-ymym
         sensitiveHeaders: "*"
-      # 物流模块
-      express-service:
-        path: /hyapi/admin/inbound/**
-        serviceId: microservicecloud-express
-        sensitiveHeaders: "*"
-
-  ignoredServices: "*"
-  sensitiveHeaders: "*"
-#  host:
-#      connect-timeout-millis: 20000
-#      socket-timeout-millis: 20000
-
 info:
   app.name: atguigu-microcloud
   company.name: www.atguigu.com
