--- a/microservice-zuul-gateway-9527/src/main/resources/application.yml
+++ b/microservice-zuul-gateway-9527/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   # 将端口由9527改为80,使请求没有端口号
   # 较小的端口号(如80)在Ubuntu下需要权限
   port: 9527
+  undertow:
+    # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接,默认取CPU核心数量,最小值为2
+    io-threads: 1000
+    # 阻塞任务线程池, 当执行类似servlet请求阻塞操作, undertow会从这个线程池中取得线程,它的值设置取决于系统的负载，默认值为io-threads*8
+    worker-threads: 8000
 
 spring:
   application:
@@ -16,6 +21,8 @@ eureka:
     prefer-ip-address: true
 
 zuul:
+  semaphore:
+    max-semaphores: 10000
   host:
     max-per-route-connections: 10000
     max-total-connections: 60000
@@ -55,6 +62,7 @@ zuul:
         path: /hyapi/ymym/**
         serviceId: microservicecloud-ymym
         sensitiveHeaders: "*"
+
 info:
   app.name: atguigu-microcloud
   company.name: www.atguigu.com
