20190107 修改pom解决java -jar没有主属性

--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,19 @@
                 </configuration>
             </plugin>-->
 
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.4.2.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- 添加docker-maven插件 -->
             <plugin>
                 <groupId>com.spotify</groupId>
