--- a/microservice-zuul-gateway-9527/src/main/resources/application.yml
+++ b/microservice-zuul-gateway-9527/src/main/resources/application.yml
@@ -11,9 +11,10 @@ server:
 spring:
   application:
     name: microservicecloud-zuul-gateway
-
 eureka:
   client:
+    register-with-eureka: true
+    fetch-registry: true
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka
   instance:
