--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,7 @@
 version: '2'
 services:
-  discovery:
-    image: zmc/microservice-eureka-7001:0.0.1-SNAPSHOT
+  redis:
+    image: redis
     ports:
-      - "7001:7001"
-  microservice-provider-express-9227:
-    image: zmc/microservice-provider-express-9227:0.0.1-SNAPSHOT
-  microservice-provider-login-8001:
-    image: zmc/microservice-provider-login-8001:0.0.1-SNAPSHOT
-  microservice-provider-order-9427:
-    image: zmc/microservice-provider-order-9427:0.0.1-SNAPSHOT
-  microservice-provider-product-9001:
-    image: zmc/microservice-provider-product-9001:0.0.1-SNAPSHOT
-  microservice-provider-supplier-5001:
-    image: zmc/microservice-provider-supplier-5001:0.0.1-SNAPSHOT
-  microservice-provider-upload-6001:
-    image: zmc/microservice-provider-upload-6001:0.0.1-SNAPSHOT
-  microservice-provider-ymym-9327:
-    image: zmc/microservice-provider-ymym-9327:0.0.1-SNAPSHOT
-  microservice-zuul-gateway-9527:
-    image: zmc/microservice-zuul-gateway-9527:0.0.1-SNAPSHOT
+      - "6379:6379"
+    command: redis-server /home/z/redis.conf
