--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
             </resource>
         </resources>
         <plugins>
- <!--           <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.4.3</version>
@@ -142,7 +142,7 @@
                         <delimit>$</delimit>
                     </delimiters>
                 </configuration>
-            </plugin>-->
+            </plugin>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
