20190119 购物车列表和购物车删除

--- a/microservice-zuul-gateway-9527/src/main/resources/application.yml
+++ b/microservice-zuul-gateway-9527/src/main/resources/application.yml
@@ -61,7 +61,7 @@ zuul:
         serviceId: microservicecloud-upload
       # 商城模块
       ymym-service:
-        path: /hyapi/ymym/**
+        path: /hyapi/ymmall/**
         serviceId: microservicecloud-ymym
         sensitiveHeaders: "*"
 
