--- a/microservice-api/pom.xml
+++ b/microservice-api/pom.xml
@@ -25,11 +25,17 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.4</version>
         </dependency>
-
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1.3</version>
+        </dependency>
+        <!-- 20190321 HttpServletRequest HttpServletResponse Cookie相关的操作 增加java.servlet包-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
